<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/before_we_begin"
        android:id="@+id/textView2"
        android:paddingTop="10dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/babyNameText"
        android:layout_gravity="right|center_vertical"
        android:hint="@string/name" />

    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/birthdayText"
            android:layout_gravity="left|center_vertical"
            android:hint="@string/birthday"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_weight="1" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pickBdayButton"
            android:layout_gravity="right|center_vertical"
            android:onClick="showDatePickerDialog"
            android:src="@android:drawable/ic_menu_my_calendar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/imageView"
            android:layout_gravity="left|center_vertical"
            android:src="@drawable/babyface" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_gallery"
            android:id="@+id/gallery_button"
            android:onClick="pickPictureFromGallery"
            android:layout_gravity="left|center_vertical" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_camera"
            android:id="@+id/camera_button"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:onClick="saveAndContinue"/>

</LinearLayout>